# lego-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
agent/: build_agent.py
examples/: build_bone_cathedral.py  build_dbx.py  build_dxb.py  build_dxb_arch.py  build_dxb_gates.py  build_dxb_gates_mega.py  build_house.py  build_hut.py
lego_mcp/: catalog.py  engine.py  export.py  server.py
tests/: test_engine.py
